--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
-    <link href="/src/index.css" rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.rastikerdar.github.io" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/icon-192.png">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css"
-    />
-    <title>Word Clock</title>
+    <title>dyslexics-clock</title>
   </head>
   <body>
     <div id="root"></div>
